# BatBot

./: .gitignore  CMakeLists.txt  README.md
config/: config_example.json
src/: main.cpp
src/bot/: bot.cpp  bot.hpp
src/config/: config.cpp  config.hpp
src/detection/: detection.cpp  detection.hpp
